Добавлена сериализация и десериализация BlockChain